--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -90,7 +90,8 @@ table {
   background: var(--clr-darkgreen);
   box-shadow: var(--shadow);
   font: var(--font-standard);
-  width: 100%;
+  /* width: 100%; */
+  width: 100vw;
   display: flex; 
   justify-content: space-between;   
   height: 70px;
@@ -102,7 +103,8 @@ table {
 
 .navigationWithoutPicture {
   font: var(--font-standard);
-  width: 100%;
+  /* width: 100%; */
+  width: 100vw;
   display: flex; 
   justify-content: space-between;   
   height: 70px;
@@ -391,10 +393,10 @@ table {
   width: 100%; 
   left: 50%; 
   top: 50%; 
-  height: 100%; 
   object-fit: cover; 
   transform: translate(-50%, -50%); 
   z-index: -4;
+  /* height: 100%;  */
 }
 
 /* Dashboard */
