--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -396,7 +396,7 @@ table {
   object-fit: cover; 
   transform: translate(-50%, -50%); 
   z-index: -4;
-  /* height: 100%;  */
+  height: 100%; 
 }
 
 /* Dashboard */
