hiding mapbox logo from the map

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1693,6 +1693,10 @@ body.modalActive {
   height: 450px;
 }
 
+a.mapboxgl-ctrl-logo {
+  display: none !important;
+}
+
 .mapboxgl-ctrl-geocoder {
   display: flex;
   width: 400px !important;
