--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -649,7 +649,6 @@ table {
   background: var(--clr-brown);
   width: 50%;
   position: relative;
-  overflow: hidden;
 }
 
 .petProfilePictureContainer {
@@ -1082,87 +1081,57 @@ input[type='checkbox']:checked ~ label {
   padding-left: 10px;
 }
 
-.fade-in1 {
+.fade-in {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
   position: absolute;
   left: 50%;
   top: 50%;
-  height: 100%;
   object-fit: cover;
   transform: translate(-50%, -50%);
   z-index: -1;
   filter: brightness(90%);
+  transition: opacity 1s ease-in-out;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
   opacity: 0;
-  transition: opacity 1s ease-in-out;
-  width: 100vw;
 }
 
-.fade-out1 {
+.fade-out {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
   position: absolute;
   left: 50%;
   top: 50%;
-  height: 100%;
   object-fit: cover;
   transform: translate(-50%, -50%);
   z-index: -1;
   filter: brightness(90%);
   transition: opacity 1s ease-in-out;
-  width: 100vw;
-}
-
-.fade-in2 {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   overflow: hidden;
-  position: absolute;
-  left: 50%;
-  top: 50%;
+  width: 100%;
   height: 100%;
-  object-fit: cover;
-  transform: translate(-50%, -50%);
-  z-index: -1;
-  filter: brightness(90%);
-  transition: opacity 1s ease-in-out;
-  width: 100vw;
-}
-
-.fade-out2 {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  overflow: hidden;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  height: 100%;
-  object-fit: cover;
-  transform: translate(-50%, -50%);
-  z-index: -1;
-  filter: brightness(90%);
-  transition: opacity 1s ease-in-out;
-  width: 100vw;
 }
 
 /* Login, Registration form */
 .registerContainer,
 .loginContainer {
+  filter: brightness(90%);
   position: absolute;
+  align-items: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: var(--font-family);
   display: flex;
   justify-content: space-around;
-  width: 100vw;
-  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  /* overflow: hidden; */
 }
 
 .logoContainer {
